[common] Logger, revert to thread.getId() for now